Rename project from pin2203 to pin2203backend

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=pin2203
+APP_NAME=pin2203backend
 APP_ENV=local
 APP_KEY=base64:qbmdzWp/WJc8rsSjKiRKk2Utvo0SwvjfWU2U8LsuiFQ=
 APP_DEBUG=true
