--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=pin2203backend
 APP_ENV=local
-APP_KEY=base64:qbmdzWp/WJc8rsSjKiRKk2Utvo0SwvjfWU2U8LsuiFQ=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
