--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build",
-        "prod": "npm run production"
+        "build": "vite build"
     },
     "devDependencies": {
         "axios": "^1.1.2",
