--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=pin2203backend
+APP_NAME=amilano-backend
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=dbpin2203
+DB_DATABASE=db_amilano
 DB_USERNAME=root
 DB_PASSWORD=
 
