--- a/.env.example
+++ b/.env.example
@@ -28,11 +28,11 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=sandbox.smtp.mailtrap.io
+MMAIL_MAILER=smtp
+MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=ca3810c62007db
-MAIL_PASSWORD=7a5b4032c029bf
+MAIL_USERNAME=aacf6640f17171
+MAIL_PASSWORD=9c7436d38e9d80
 MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
